# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .env.test_e2e  .gitignore  .terraform.lock.hcl  .travis.yml  Dockerfile  README.md  ToDoItem.py  Vagrantfile  app.py  board_api.py  docker-compose.prod.yml  docker-compose.yml  main.tf  outputs.tf  pyproject.toml  requirements.txt  session_items.py  setup.sh  to_do_item.py  to_do_items_view_model.py  trello_config.py  trello_config_reader.py  variables.tf
build_scripts/: deploy.sh  production_entrypoint.sh  publish_and_deploy.sh
documentation/: System diagrams.drawio
src/: app.py  app_user.py  auth_provider.py  board_repository.py  to_do_item.py  to_do_items_view_model.py  wsgi.py
src/templates/: index.html  item_list.html
src/tests/: test_integration_tests.py  test_to_do_items_view_model.py
src/tests_e2e/: test_e2e_tests.py
templates/: index.html  item_list.html
tests/: new_thing.py  test_to_do_items_view_model.py
tests_e2e/: test_e2e_tests.py
trello_config/: api_key.txt  token.txt
