[tool.poetry]
name = "devops-course-starter"
version = "0.1.0"
description = ""
authors = ["Chris Cairns <reg@monexa.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
requests = "^2.24.0"
python-dateutil = "^2.8.1"
python-dotenv = "^0.14.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
selenium = "^3.141.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
